force-app/main/default/objects/OpportunityTeamMember/fields/IsBusy__c.field-meta.xml
<CustomField>
    <fullName>IsBusy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checked if team member is working in the mean time</description>
    <label>IsBusy</label>
    <type>Checkbox</type>
</CustomField>